# gabriel

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  bandwidth.f90  configure.ac  example.f90  example1d.f90  example_auto.f90  example_auto1d.f90  example_auto2d.f90  example_auto_joined.f90  example_auto_offset.f90  example_auto_packed.f90  example_composition.f90  example_err.f90  example_joined.f90  example_transform.f90  example_transform_offset.f90  gabriel.docset  gabriel.f90  gabriel.md  halos.docset  halos.f90  input
